--- a/app/src/main/res/layout/item_commerce.xml
+++ b/app/src/main/res/layout/item_commerce.xml
@@ -38,7 +38,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/large"
-            android:textSize="18sp"
+            android:textSize="@dimen/text_default"
             android:textStyle="bold"
             tools:text="250m."
             android:textColor="@color/white"
@@ -54,15 +54,16 @@
             app:srcCompat="@drawable/arrow_right"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintBottom_toBottomOf="@id/view_category_color"/>
+            app:layout_constraintBottom_toBottomOf="@id/view_category_color"
+            android:contentDescription="@string/right_arrow_image_description" />
 
 
         <androidx.cardview.widget.CardView
             android:id="@+id/cardview_image_commerce"
-            android:layout_width="76dp"
-            android:layout_height="76dp"
+            android:layout_width="@dimen/img_cardview_size"
+            android:layout_height="@dimen/img_cardview_size"
             android:layout_marginHorizontal="@dimen/large"
-            android:layout_marginVertical="24dp"
+            android:layout_marginVertical="@dimen/large"
             app:cardCornerRadius="@dimen/medium"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -84,7 +85,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/large"
             tools:text="Lorem ipsum"
-            android:textSize="21sp"
+            android:textSize="@dimen/large"
             android:textStyle="bold"
             android:maxLines="1"
             android:ellipsize="end"
@@ -100,7 +101,7 @@
             android:layout_height="wrap_content"
             android:layout_marginHorizontal="@dimen/large"
             tools:text="Lorem ipsum dolor"
-            android:textSize="14sp"
+            android:textSize="@dimen/text_default"
             android:maxLines="1"
             android:ellipsize="end"
             app:layout_constraintBottom_toBottomOf="@id/cardview_image_commerce"
